--- a/project/site/css/works_cui.css
+++ b/project/site/css/works_cui.css
@@ -1,9 +1,6 @@
 @charset "UTF-8";
 /* CSS Document */
 
-@charset "UTF-8";
-/* CSS Document */
-
 /*---- Site Colors 
 #ebebeb slightly darker gray 
 #ffffff main background
@@ -44,7 +41,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-	width: 1400px;
+/*	width: 1400px;*/
 }
 ol, ul {
 	list-style: none;
@@ -63,15 +60,20 @@ table {
 }
 
 body {
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Montserrat', sans-serif; /*deleted the width*/
 }
 
-nav {
+header { /*made changes */
+	width:100%;
+	background-color: #ebebeb;
+		overflow: hidden;
+}
+nav { /*made changes */
 	width: 1440px;
 	height: 94px;
 	background-color: #ebebeb;
 	overflow: hidden;
-	margin-bottom: 100px;
+	margin: 0 auto 15px;
 	
 }
 
@@ -105,6 +107,12 @@ nav li {
 	float: right;
 }
 
+.nav a.active {
+	background-color: #2f5789;
+	color: white;
+	padding: 5px;
+}
+
  nav a:link {
 	text-decoration: none;
 	color: #2f5789;
@@ -125,7 +133,7 @@ nav a:hover {
 
 .wrapper {
 	width: 1135px;
-	height: 830px;
+	height: 900px;
 	margin: 0 auto;
 }
 
@@ -135,7 +143,7 @@ h1 {
 	color: #2f5789;
 	margin-top: 64px;
 	margin-bottom: 43px;
-	margin-left: 150px;
+	margin-left: 10px; /* you may change the size here*/
 }
 
 .column {
@@ -180,15 +188,20 @@ h5 {
 	font-size: 16px;
 	text-decoration: none;
 }
+ #container2 { /* new */
+	width:100%;
+	 background-color: #ebebeb;
+	 overflow: hidden;
+	 clear: both;
+	 margin-top: 80px; /* you may change the size here*/
+}
 
 footer {
 	width: 1440px;
 	height: 94px;
 	background-color: #ebebeb;
-	margin-top: 150px;
-	overflow: hidden;
-	
-	
+/*	margin-top: 150px;*/
+	margin:0 auto;	
 }
 
 .small {
@@ -213,9 +226,7 @@ footer {
 	margin-right: 34px;
 	border: 2px solid #ffffff;
 	border-radius: 100px;
-	
-
-	
+		
 }
 
 p {
@@ -224,12 +235,137 @@ p {
 	line-height: normal;
 	max-width: 1120px;
 	margin-bottom: 62px;
-	margin-left: 150px;
+	margin-left: 10px; /* you may change the size here*/
+}
+
+
+
+.gallery { /*made changes */
+	width: 100%;/* you may use fixed size here*/
+	background-color: whitesmoke;
+	padding: 10px;
+	position: relative;
+	float: left;
+
+}
+
+/*Home Page Styles */
+
+.info {
+	float: left;
+	width: 600px;
+	margin-top:162px;
+	margin-right: 25px;
+	text-align: justify;
+}
+
+p {
+	line-height: 1.5;
+}
+
+.photo {
+	float: right;
+	width: 460px;
+	height: 776px;
+	margin-top: 162px;
+}
+/*bellow- new from shanshan*/
+article {
+	width: 1150px;
+	margin: 0 auto; 
+}
+
+.clearboth {
+	clear: both;
+}
+.container {
+  position: relative;
+  width:31.5%; /* you need to change the size here. You may use fixed size, but the image size should be the same*/
+float: left;
+	margin: 10px;
+padding: 0;
+}
+
+.image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #2f5789;
+
+}
+
+.container:hover .overlay {
+  opacity: 0.8;
+}
+
+.text {
+  color: white;
+	font-family: 'Montserrat', sans-serif; 
+	font-weight: bold;
+  font-size: 30px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+
+/*Contact Styles*/
+
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */ 
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color:#2f5789;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color:rgba(47,87,137,0.70) 
+}
+
+/* Add a background color and some padding around the form */
+.container3 {
+  border-radius: 5px;
+  background-color: #ebebeb;
+  padding: 20px;
 }
 
 .directional {
-	margin-left: 114px;
 	margin-top: 54px;
+	margin-left: 114px;
+	margin-bottom: 98px;
+	
 }
 
 .directional a {
